--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/etozhenerk/HuntersPoints/issues"
   },
-  "homepage": "https://github.com/etozhenerk/HuntersPoints#readme"
+  "homepage": "https://github.com/etozhenerk/HuntersPoints#readme",
+  "devDependencies": {
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9"
+  }
 }
